<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="cursive"
        android:text="@string/form"
        android:textColor="@color/coral"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/name"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:hint="@string/name2"
            android:inputType="text"
            android:maxLength="27"
            android:maxLines="1"
            android:textColor="@color/coral"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/last"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:hint="@string/lastname"
            android:inputType="text"
            android:maxLength="27"
            android:maxLines="1"
            android:textColor="@color/coral"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:hint="@string/user"
            android:inputType="text"
            android:maxLength="27"
            android:maxLines="1"
            android:textColor="@color/coral"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/coral"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/pass2"
            android:text="@string/password2"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:hint="@string/pass2"
            android:inputType="textPassword"
            android:textColor="@color/coral"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:textColor="@color/coral"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto_black"
        android:onClick="signupclicked"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/orangered"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>