<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"
        android:id="@+id/ivLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name2"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/etNameP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/etLastnameP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/etUserP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email2"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/etEmailP"/>

</LinearLayout>