<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.santiagoalvarez_andrealiz.vestigium.ProfileFragment">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/etNameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/name2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etLastnameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/lastname"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etUserP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/userp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etEmailP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/email2"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>